Finalizada vista de registro, login y home

--- a/gym/templates/home.html
+++ b/gym/templates/home.html
@@ -1,3 +1,49 @@
 {% extends 'basePostLogin.html' %} {% block content %}
-<h1>Home</h1>
+<div class="container">
+  <section class="profile">
+    {% load static %}
+    <div>
+      <img
+        src="{% static 'images/fotoPerfil.png' %}"
+        alt="Foto de perfil"
+        title="{{user.first_name}}" />
+      <div class="move__right">
+        <p class="text__thin">
+          Bienvenido, <span class="text__bold">{{user.first_name}}</span>!
+        </p>
+
+        <p class="info">Esta es tu información actual:</p>
+      </div>
+    </div>
+
+    <div class="plan__container">
+      <h1>
+        <span class="plan">Plan</span>
+        <span class="dias">Musculación 5 días</span>
+      </h1>
+    </div>
+    <ul class="info__alumno">
+      <li class="text__thin"><span class="text__bold">Pago: </span>al día</li>
+      <li class="text__thin"><span class="text__bold">Debe: </span>-$</li>
+      <li class="text__thin">
+        <span class="text__bold">Vence: </span>29/10/2024
+      </li>
+      <li class="text__thin">
+        <span class="text__bold">Estado de la cuenta: </span>asiste
+      </li>
+    </ul>
+  </section>
+  <section class="eslogan__container">
+    <div class="eslogan__postLogin">
+      {% load static %}
+      <img
+        src="{% static 'images/wapLogo.png' %}"
+        alt="Logo
+  whatsapp" />
+      <p>Consultar por whatsapp</p>
+    </div>
+    <div class="eslogan__dark"><a href="rutina/">Accedé a tu rutina</a></div>
+  </section>
+</div>
+
 {% endblock %}
