--- a/gym/templates/ingresar.html
+++ b/gym/templates/ingresar.html
@@ -1,7 +1,7 @@
 {% extends 'basePreLogin.html' %} {% block content %}
-<div>
-  <button><a href="signup/">Registrarme</a></button>
-  <button><a href="signin/">Iniciar Sesión</a></button>
+<div class="container-btn-ingresar">
+  <button class="btn__signup"><a href="signup/">Registrarme</a></button>
+  <button class="btn__signin"><a href="signin/">Iniciar Sesión</a></button>
 </div>
 
 {% endblock %}
