--- a/gym/templates/signin.html
+++ b/gym/templates/signin.html
@@ -9,7 +9,7 @@
       id="username"
       required=""
       class="input__form" />
-    <label for="username">Ingresar correo electrónico</label>
+    <label for="username" class="email">Ingresar correo electrónico</label>
   </div>
   <div class="input__field">
     <input
