--- a/gym/templates/signup.html
+++ b/gym/templates/signup.html
@@ -30,7 +30,7 @@
       id="email"
       required=""
       class="input__form" />
-    <label for="email">Ingresar correo electrónico</label>
+    <label for="email" class="email">Ingresar correo electrónico</label>
   </div>
 
   <div class="input__field">
