--- a/gym/templates/perfilAlumno_staff.html
+++ b/gym/templates/perfilAlumno_staff.html
@@ -1,37 +1,50 @@
 {% extends 'basePostLogin.html' %} {% block content %}
-<section>
-  <div>
-    {% load static %}
-    <img
-      src="{% static 'images/fotoPerfil.png' %}"
-      alt="Foto de perfil"
-      title="{{user.first_name}}" />
-    <div>
-      <p>Alumno <span>{{user.first_name}}, {{user.last_name}}</span></p>
-    </div>
-    <p>Esta es su información actual:</p>
-  </div>
-</section>
-<section>
-  <div>
-    <h1><span>Plan</span> Musculación 5 días</h1>
-  </div>
-  <ul>
-    <li><span>Pago: </span>al día</li>
-    <li><span>Debe: </span>-$</li>
-    <li><span>Vence: </span>29/10/2024</li>
-    <li><span>Estado de la cuenta: </span>asiste</li>
-  </ul>
-</section>
-<section>
-  <div>
-    {% load static %}
-    <img
-      src="{% static 'images/wapLogo.png' %}"
-      alt="Logo
-    whatsapp" />
-    <p>Enviar alerta pro whatsapp</p>
-  </div>
-</section>
 
+<div class="container">
+  <section class="profile">
+    {% load static %}
+    <div>
+      <img
+        src="{% static 'images/fotoPerfil.png' %}"
+        alt="Foto de perfil"
+        title="{{user.first_name}}" />
+      <div class="move__right">
+        <p class="text__thin">
+          Alumno
+          <span class="text__bold" id="nombre_alumno"> </span>
+          <span class="text__bold" id="apellido_alumno"></span>
+        </p>
+
+        <p class="info">Esta es su información actual:</p>
+      </div>
+    </div>
+
+    <div class="plan__container">
+      <h1>
+        <span class="plan">Plan</span>
+        <span class="dias">Musculación 5 días</span>
+      </h1>
+    </div>
+    <ul class="info__alumno">
+      <li class="text__thin"><span class="text__bold">Pago: </span>al día</li>
+      <li class="text__thin"><span class="text__bold">Debe: </span>-$</li>
+      <li class="text__thin">
+        <span class="text__bold">Vence: </span>29/10/2024
+      </li>
+      <li class="text__thin">
+        <span class="text__bold">Estado de la cuenta: </span>asiste
+      </li>
+    </ul>
+  </section>
+  <section class="eslogan__container">
+    <div class="eslogan__postLogin">
+      {% load static %}
+      <img
+        src="{% static 'images/wapLogo.png' %}"
+        alt="Logo
+  whatsapp" />
+      <p>Consultar por whatsapp</p>
+    </div>
+  </section>
+</div>
 {% endblock %}
