--- a/gym/static/css/index.css
+++ b/gym/static/css/index.css
@@ -658,6 +658,8 @@ form button {
   color: #e6fe58;
   text-align: center;
   opacity: 0;
+  font-family: var(--font-red-hat);
+  font-size: 24px;
   transition: transform 0.5s ease, opacity 0.5s ease;
 }
 
