--- a/gym/static/css/index.css
+++ b/gym/static/css/index.css
@@ -22,8 +22,8 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role="list"],
-ol[role="list"],
+ul[role='list'],
+ol[role='list'],
 li {
   list-style: none;
 }
@@ -89,9 +89,9 @@ select {
   --text-black: #000000;
   --primary: #e6fe58;
 
-  --font-red-hat: "Red Hat Text", serif;
-  --font-lexand-tera: "Lexend Tera", serif;
-  --font-lexand-deca: "Lexend Deca", serif;
+  --font-red-hat: 'Red Hat Text', serif;
+  --font-lexand-tera: 'Lexend Tera', serif;
+  --font-lexand-deca: 'Lexend Deca', serif;
 }
 
 ::-webkit-scrollbar {
@@ -649,18 +649,29 @@ form button {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, 50%);
+  transform: translate(-50%, -50%);
   width: 300px;
+  z-index: 100;
   padding: 20px;
   border: 1px solid #95959530;
   border-radius: 23px;
   background-color: #232222;
   color: #e6fe58;
-  text-align: center;
+
   opacity: 0;
+
   font-family: var(--font-red-hat);
   font-size: 24px;
   transition: transform 0.5s ease, opacity 0.5s ease;
+  height: 100px;
+  background: rgba(15, 15, 13, 0.5);
+  -webkit-backdrop-filter: blur(12px);
+  backdrop-filter: blur(12px);
+  border: 1px solid rgba(15, 15, 13, 0.25);
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  font-weight: 700;
 }
 
 .popup.open {
@@ -670,11 +681,12 @@ form button {
 
 .popup.close {
   transform: translate(-50%, 150%);
-  opacity: 0;
 }
 
-@media (min-width: 654px) {
-  .wrapped {
-    padding: 40px 0 80px 0;
-  }
+.container__rutina {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  overflow-y: auto;
 }
